# corp-stat-autofiller

./: .gitignore  README.md  app.py  pyproject.toml
config/: mapping.yaml  rules.yaml
docs/: beginner_setup_windows.md  developer_guide.md  release_zip.md
sample_output/: fill_plan.json  unresolved_items.csv  validation_report.md
src/corp_stat_autofiller/: __init__.py  cli.py  config.py
src/corp_stat_autofiller/loaders/: bs_csv_loader.py  csv_utils.py  payroll_csv_loader.py  pdf_loader.py  pl_csv_loader.py  survey_workbook_loader.py
src/corp_stat_autofiller/mapping/: __init__.py  mapping_resolver.py
src/corp_stat_autofiller/models/: __init__.py  domain_models.py
src/corp_stat_autofiller/rules/: __init__.py  business_rules.py  payroll_rules.py  validation_rules.py
src/corp_stat_autofiller/writers/: audit_writer.py  workbook_writer.py
tests/: test_end_to_end_dry_run.py  test_mapping_resolver.py  test_payroll_rules.py  test_statement_loaders.py  test_validation_rules.py  test_workbook_writer.py
