[project]
name = "corp-stat-autofiller"
version = "0.1.0"
description = "法人企業統計調査（四半期別調査票B）のExcel自動入力支援ツール"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.0",
    "PyYAML>=6.0",
    "pdfplumber>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

